--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-body">
     <div class="container-fluid">
-        <a class="navbar-brand patua-one" href="#">
+        <a class="navbar-brand patua-one fs-1 ms-3" href="#">
             <span class="eatfit-e">E</span>at<span class="eatfit-f">F</span>it</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,5 +31,9 @@
             </ul>
 
         </div>
+   <div class="navbar-brand fs-1 ms-3 invisible d-none d-lg-block order-lg-3">
+      <span>EatFit</span>
+    </div>
+
     </div>
 </nav>
