--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,22 @@
 .poppins {
     font-family: 'Poppins', sans-serif;
 }
+.morado{
+    color:#514BFF
+}
+.naranja{
+    color:#FF8C00
+}
+.fondoNaranja{
+    background-color:#FFEBDA
+}
+.amarillo{
+    color:#FFCB00
+}
+.fondoAmarillo{
+    background-color:#FFF6D5
+}
+
+.gris{
+  background-color: #EAEAEA;
+}
