--- a/src/app/componente/inicio/inicio.component.html
+++ b/src/app/componente/inicio/inicio.component.html
@@ -1,37 +1,51 @@
 <div class="border rounded-circle border-5 mx-auto mt-5
             d-flex flex-column justify-content-center align-items-center
-            w-50" style="max-width:200px; aspect-ratio: 1 / 1; border-color: #514BFF !important;">
-  <i class="bi bi-moon-fill fs-1 mb-1 fs-1"></i>
+            w-75 w-sm-50 w-md-25"
+     style="max-width:260px; aspect-ratio: 1 / 1; border-color: #514BFF !important;">
+  <i class="bi bi-moon-fill fs-1 mb-1"></i>
   <p class="mb-0">{{horaMinutos}}</p>
 </div>
 
-<div class="d-flex justify-content-center mt-3">
-  <div class="d-inline-flex flex-column align-items-stretch">
-    <div class="rounded-5"
-         style="background-color: #514BFF; min-width: 500px; min-height: 40px;">
+
+<div class="d-flex justify-content-center mt-3 mb-4">
+  <div class="w-100 px-3" style="max-width: 500px;">
+
+    <div class="d-flex justify-content-between text-muted mb-1">
+      <span>0:10</span>
+      <span>7:30</span>
     </div>
+
+    <div class="rounded-5 w-100"
+         style="background-color: #514BFF; height: 40px;">
+    </div>
+
   </div>
 </div>
 
-<div class="d-flex justify-content-center mt-5">
-  <div class="d-inline-flex flex-column align-items-stretch">
 
-    <div class="d-flex gap-5">
-      <div class="border border-danger-subtle rounded-2 p-3 fw-bolder d-flex align-items-center justify-content-center"
-        style="min-width: 200px; min-height: 70px; background-color: #FFEBDA;">
-        <i class="bi bi-fire me-2" style="color: #FF8C00;"></i>
+<div class="d-flex justify-content-center">
+  <div class="w-100 px-3" style="max-width: 500px;">
+
+    <div class="d-flex gap-3 mb-3">
+      <div class="border border-danger-subtle rounded-2 p-3 fw-bolder
+                  d-flex align-items-center justify-content-center
+                  w-50 fondoNaranja fs-4">
+<i class="bi bi-fire me-2 naranja fs-2"></i>
+
         {{calorias}}
       </div>
 
-      <div class="border border-warning-subtle rounded-2 p-3 fw-bolder d-flex align-items-center justify-content-center"
-        style="min-width: 200px; min-height: 70px; background-color: #FFF6D5;">
-        <i class="bi bi-fire me-2" style="color:#FFCB00"></i>
+      <div class="border border-warning-subtle rounded-2 p-3 fw-bolder
+                  d-flex align-items-center justify-content-center
+                  w-50 fondoAmarillo fs-4">
+        <img src="assets/img/pasos.svg" style="width: 35px;" class="me-2">
         {{pasos}}
       </div>
     </div>
 
-    <div class="rounded-2 border border-black fw-bolder p-3 mt-3 w-100 text-center" style="background-color: #EAEAEA;">
-      rth
+    <div class="rounded-2 border border-black fw-bolder p-3 w-100 text-center"
+         style="background-color: #EAEAEA;">
+      <p>ierferfrefrffer</p>
     </div>
 
   </div>
