--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<!-- <div class="container-main">
+  <app-navbar></app-navbar>
+  
+
+  <div class="router-content">
+    <router-outlet></router-outlet>
+  </div>
+  
+  <app-footer></app-footer>
+</div>
+<app-signin></app-signin> -->
+
+<app-signin></app-signin>
