--- a/src/app/componente/autenticacion/signin/signin.component.html
+++ b/src/app/componente/autenticacion/signin/signin.component.html
@@ -1,1 +1,31 @@
-<p>signin works!</p>
+<div class="container-fluid bg-black d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+  <div class="col-12 col-md-6 col-lg-4">
+    <div class="text-center mb-4 patua-one text-white">
+        <span style="font-size: 80px;"><span class="eatfit-e">E</span>at<span class="naranja">F</span>it</span>
+        <p style="font-size: 40px;">Tracker</p>
+
+      <p class="fs-2">¡Bienvenido!</p>
+    </div>
+
+    <form >
+      <div class="mb-3">
+        <input type="text" class="text-black form-control form-control-lg border-0 rounded-3 text-warning" placeholder="Nombre" required>
+      </div>
+      <div class="mb-3">
+        <input type="email" class="text-black form-control form-control-lg border-0 rounded-3 text-warning" placeholder="Email" required>
+      </div>
+      <div class="mb-3">
+        <input type="password" class="text-black form-control form-control-lg border-0 rounded-3 text-warning" placeholder="Contraseña" required>
+      </div>
+      <div class="mb-4">
+        <input type="password" class="text-black form-control form-control-lg border-0 rounded-3 text-warning" placeholder="Confirmar contraseña" required>
+      </div>
+      
+      <button type="submit" class="text-white fondoNaranjaOscuro w-100 py-2 fs-2 rounded-3">Registrar</button>
+    </form>
+
+    <div class="text-center mt-3">
+      <p><a href="#" class="text-white">¿Tienes una cuenta? <span class="naranja">Inicia sesión</span></a></p>
+    </div>
+  </div>
+</div>
