--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<!--@if (!isAuthenticated) {
+<div *ngIf="isAuthenticated; else publicBlock" class="app-layout">
+  <app-navbar></app-navbar>
 
-  <app-signin></app-signin>
-} @else {
-Si SÍ está logueado, muestra la app completa -->
+  <div class="app-content">
+    <router-outlet></router-outlet>
+  </div>
 
+  <app-footer></app-footer>
+</div>
 
-      <router-outlet></router-outlet>
-
-<!-- }-->
+<ng-template #publicBlock>
+  <!-- SIN navbar/footer, PERO con router -->
+  <router-outlet></router-outlet>
+</ng-template>
