--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand patua-one fs-1 ms-3" routerLink="/home"
             [ngClass]="{'btn-outline-light': botonActivo === 'inicio', 'btn-light': botonActivo !== 'inicio'}"
             (click)="setActiveButton('inicio')">
-            <span class="eatfit-e">E</span>at<span class="eatfit-f">F</span>it
+            <span class="eatfit-e">E</span>at<span class="naranja">F</span>it
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
