--- a/src/app/componente/perfil/perfil.component.html
+++ b/src/app/componente/perfil/perfil.component.html
@@ -41,21 +41,20 @@
               <i class="bi bi-chevron-right"></i>
             </div>
           </div>
+<div class="d-flex align-items-center justify-content-between py-2">
+  <div class="d-flex align-items-center gap-2">
+    <img src="assets/img/pasosNegro.svg" style="width: 16px;" class="me-2">
+    <span class="fw-semibold small">Pasos</span>
+  </div>
+  <div class="d-flex align-items-center gap-2">
+    <span class="small">7000</span>
+    <i class="bi bi-chevron-right"></i>
+  </div>
+</div>
 
-          <div class="d-flex align-items-center justify-content-between py-2">
-            <div class="d-flex align-items-center gap-2">
-              <i class="bi bi-footprints"></i>
-              <span class="fw-semibold small">Pasos</span>
-            </div>
-            <div class="d-flex align-items-center gap-2">
-              <span class="small">7000</span>
-              <i class="bi bi-chevron-right"></i>
-            </div>
-          </div>
         </div>
       </div>
 
-      <!-- Card: Información Personal -->
       <div class="bg-white rounded-4 shadow-sm mt-4 overflow-hidden text-start">
         <div class="py-2 text-center fw-semibold"
              style="background:#cfcfcf;">
@@ -110,7 +109,6 @@
       </div>
     </div>
 
-    <!-- Botón cerrar sesión -->
 <button
   class="btn w-100 mt-4 py-3 fw-bold text-white rounded-3"
   style="background:#ff5b5b;"
