--- a/src/app/componente/autenticacion/signin/signin.component.html
+++ b/src/app/componente/autenticacion/signin/signin.component.html
@@ -9,7 +9,6 @@
     </div>
 
     <form [formGroup]="registerForm" (submit)="onSubmit()">
-      <!-- Campo Nombre -->
       <div class="mb-3">
         <input type="text" class="form-control form-control-lg border-0 rounded-3 text-black" placeholder="Nombre"
           formControlName="name" [ngClass]="{
@@ -26,7 +25,6 @@
         </div>
       </div>
 
-      <!-- Campo Email -->
       <div class="mb-3">
         <input type="email" class="form-control form-control-lg border-0 rounded-3 text-black" placeholder="Email"
           formControlName="email" [ngClass]="{
@@ -43,7 +41,6 @@
         </div>
       </div>
 
-      <!-- Campo Contraseña -->
       <div class="mb-3">
         <input type="password" class="form-control form-control-lg border-0 rounded-3 text-black"
           placeholder="Contraseña" formControlName="password" [ngClass]="{
@@ -60,7 +57,6 @@
         </div>
       </div>
 
-      <!-- Campo Confirmar Contraseña -->
       <div class="mb-4">
         <input type="password" class="form-control form-control-lg border-0 rounded-3 text-black"
           placeholder="Confirmar contraseña" formControlName="confirmPassword" [ngClass]="{
@@ -85,7 +81,7 @@
 
 <div class="text-center mt-3">
   <p>
-    <a href="/login" class="text-white text-decoration-none">
+    <a routerLink="/login"class="text-white text-decoration-none">
       ¿Tienes una cuenta? <span class="naranja">Inicia sesión</span>
     </a>
   </p>
