--- a/src/app/componente/entreno/entreno.component.html
+++ b/src/app/componente/entreno/entreno.component.html
@@ -7,7 +7,7 @@
          style="width: 44px; height: 44px;">
       <img src="assets/img/inicioEntreno.svg" width="56px" class="rounded-circle img-fluid">
     </div>
-    <h5 class="mb-0 fw-semibold">Ruting de volumen</h5>
+    <h5 class="mb-0 fw-semibold">Rutina de volumen</h5>
   </div>
 
   <div class="rounded-4 p-4" style="background-color: #d9d9d9;">
