--- a/src/app/componente/inicio/inicio.component.html
+++ b/src/app/componente/inicio/inicio.component.html
@@ -1,45 +1,43 @@
 <div class="border rounded-circle border-5 mx-auto mt-5
             d-flex flex-column justify-content-center align-items-center
-            w-75 w-sm-50 w-md-25"
-     style="max-width:290px; aspect-ratio: 1 / 1; border-color: #514BFF !important;">
+            w-75 w-sm-50 w-md-25" style="max-width:290px; aspect-ratio: 1 / 1; border-color: #514BFF !important;">
   <i class="bi bi-moon-fill fs-1 mb-1 morado"></i>
   <p class="mb-0 fs-4 fw-bold">{{horaMinutos}}</p>
 </div>
 
 <div class="d-flex justify-content-center mt-4 mb-5">
-  <div class="w-100 px-3" style="max-width: 1000px;"> 
+  <div class="w-100 px-3" style="max-width: 1000px;">
     <div class="d-flex justify-content-between text-muted mb-1 fs-5">
       <span>0:10</span>
       <span>7:30</span>
     </div>
-    <div class="rounded-5 w-100"
-         style="background-color: #514BFF; height: 50px;"> 
+    <div class="rounded-5 w-100" style="background-color: #514BFF; height: 50px;">
     </div>
   </div>
 </div>
 
 <div class="d-flex justify-content-center mb-5">
-  <div class="w-100 px-3" style="max-width: 1000px;"> 
+  <div class="w-100 px-3" style="max-width: 1000px;">
     <div class="d-flex gap-3 mb-4">
       <div class="border border-danger-subtle rounded-2 p-4 fw-bolder
                   d-flex align-items-center justify-content-center
-                  w-50 fondoNaranja fs-4" style="height: 100px;"> 
-        <i class="bi bi-fire me-3 naranja" style="font-size: 45px;"></i> 
+                  w-50 fondoNaranja fs-4" style="height: 100px;">
+        <i class="bi bi-fire me-3 naranja" style="font-size: 45px;"></i>
         {{calorias}}
       </div>
 
       <div class="border border-warning-subtle rounded-2 p-4 fw-bolder
                   d-flex align-items-center justify-content-center
-                  w-50 fondoAmarillo fs-4" style="height: 100px;"> 
-        <img src="assets/img/pasos.svg" style="width: 45px;" class="me-3"> 
+                  w-50 fondoAmarillo fs-4" style="height: 100px;">
+        <img src="assets/img/pasos.svg" style="width: 45px;" class="me-3">
         {{pasos}}
       </div>
     </div>
 
-    <div class="rounded-2 border border-black p-3 w-100 text-center"
-         style="background-color: #EAEAEA; height: 150px;">
-      <p class="fs-4 fw-bold">Lunes</p> 
-      <p class="fs-5 text-start">Hoy toca hacer el entrenamiento de Pecho</p> 
+    <div class="rounded-2 border border-black p-3 w-100 text-center" style="background-color: #EAEAEA; height: 150px;">
+      <p class="fs-4 fw-bold">Lunes</p>
+      <p class="fs-5 text-start">Hoy toca hacer el entrenamiento de Pecho</p>
+      
     </div>
   </div>
 </div>
