--- a/src/app/componente/perfil/perfil.component.html
+++ b/src/app/componente/perfil/perfil.component.html
@@ -1,21 +1,15 @@
 <div class="container py-4 d-flex justify-content-center">
   <div class="w-100" style="max-width: 520px;">
 
-    <!-- Panel perfil -->
-    <div class="rounded-4 p-4 text-center shadow-sm"
-         style="background:#d9d9db;">
+    <div class="rounded-4 p-4 text-center shadow-sm" style="background:#d9d9db;">
 
-      <!-- Nombre + email -->
       <h4 class="fw-bold mb-1">Juan Antonio García Cabeza</h4>
-      <a class="text-dark text-decoration-underline small"
-         href="mailto:jgarcab612@iescarrillo.es">
+      <a class="text-dark text-decoration-underline small" href="mailto:jgarcab612@iescarrillo.es">
         jgarcab612&#64;iescarrillo.es
       </a>
 
-      <!-- Card: Objetivos diarios -->
       <div class="bg-white rounded-4 shadow-sm mt-4 overflow-hidden text-start">
-        <div class="py-2 text-center fw-semibold"
-             style="background:#cfcfcf;">
+        <div class="py-2 text-center fw-semibold" style="background:#cfcfcf;">
           Objetivos diarios
         </div>
 
@@ -41,23 +35,22 @@
               <i class="bi bi-chevron-right"></i>
             </div>
           </div>
-<div class="d-flex align-items-center justify-content-between py-2">
-  <div class="d-flex align-items-center gap-2">
-    <img src="assets/img/pasosNegro.svg" style="width: 16px;" class="me-2">
-    <span class="fw-semibold small">Pasos</span>
-  </div>
-  <div class="d-flex align-items-center gap-2">
-    <span class="small">7000</span>
-    <i class="bi bi-chevron-right"></i>
-  </div>
-</div>
+          <div class="d-flex align-items-center justify-content-between py-2">
+            <div class="d-flex align-items-center gap-2">
+              <img src="assets/img/pasosNegro.svg" style="width: 17px;" class="me-2">
+              <span class="fw-semibold small" style="margin-left: -7px;">Pasos</span>
+            </div>
+            <div class="d-flex align-items-center gap-2">
+              <span class="small">7000</span>
+              <i class="bi bi-chevron-right"></i>
+            </div>
+          </div>
 
         </div>
       </div>
 
       <div class="bg-white rounded-4 shadow-sm mt-4 overflow-hidden text-start">
-        <div class="py-2 text-center fw-semibold"
-             style="background:#cfcfcf;">
+        <div class="py-2 text-center fw-semibold" style="background:#cfcfcf;">
           Información Personal
         </div>
 
@@ -109,13 +102,10 @@
       </div>
     </div>
 
-<button
-  class="btn w-100 mt-4 py-3 fw-bold text-white rounded-3"
-  style="background:#ff5b5b;"
-  (click)="cerrarSesion()"
->
-  Cerrar sesión
-</button>
+    <button class="btn w-100 mt-4 py-3 fw-bold text-white rounded-3" style="background:#ff5b5b;"
+      (click)="cerrarSesion()">
+      Cerrar sesión
+    </button>
 
 
   </div>
